footer is ready
footer

--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <!-- Required Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Page Title -->
     <title>FOOD FIGHT</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="style.css">
-
 </head>
-
 
 <body>
     <!-- Home page area -->
@@ -24,7 +23,7 @@
             <div class="nav-links">
 
                 <ul>
-                    <a href="#main">
+                    <a href="#">
                         <li>HOME</li>
                     </a>
                     <a href="#about">
@@ -40,41 +39,69 @@
                         <li>CONTCAT</li>
                     </a>
             </div>
-
             </ul>
-
         </div>
     </div>
-
     </div>
 
     <!--  ABOUT area -->
     <div id="about">
-
     </div>
+
     <!-- MENU area -->
     <div id="menu">
-
     </div>
     <!-- BLOG area -->
     <div id="blog">
-
     </div>
     <!-- CONTACT US area -->
     <div id="contact">
-        <!-- Footer Area Starts -->
-        <div class="footer">
-            <div class="footer-contant">
-                <div class="footer-section about"></div>
-                <div class="footer-section contact us"></div>
-                <div class="footer-section opening hours"></div>
-            </div>
-            <div class="footer-bottom">
-                &copy; codingpoets.com | Designed by Ali Qadeer
-            </div>
-        </div>
-        <!-- Footer Area End -->
     </div>
+    <!-- Footer Area Starts -->
+    <div class="footer">
+        <div class="inner-footer">
+            <div class="logo-container">
+                <img src="nav-logo.jpg">
+                <span>Whether you’re opening a new restaurant, updating,your <br>website, or giving your promotional materials a, it’s<br>important to include a restaurant mission statement. <br>Your restaurant is an extension of yourself and the values <br>that you live by, and communicating that to your guests<br> can help them understand your restaurant and turn them<br> into more loyal customers. Understanding your mission<br> more also helps get new people through the door.</span>
+            </div>
+            <div class="footer_third">
+                <h1>Contact Us</h1>
+                <i class="fa fa-map-marker"></i>
+                <p>1234 Some St San Francisco,<br> CA 94102, US 1.800.123.4567 </p>
+                <i class="fa fa-phone"></i>
+                <p>(123) 456 78 90</p>
+                <i class="fa fa-envelope-o"></i>
+                <p>support.com</p>
+            </div>
+            <div class="footer_third">
+                <h1>Opening Hours</h1>
+                <p>Monday ...................... Closed</p>
+                <br>
+                <p>Tue-Fri .............. 10 am - 12 pm</p>
+                <br>
+                <p>Sat-Sun ............. 08 am - 11 pm</p>
+                <br>
+                <p>Holidays ............ 10 am - 12 pm</p>
+
+            </div>
+            <div class="footer_third">
+                <h1>Follow us</h1>
+
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li><br>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li><br>
+                <li><a href="#"><i class="fa fa-google-plus"></i></a></li><br>
+                <li><a href="#"><i class="fa fa-pinterest"></i></a></li><br>
+                <li><a href="#"><i class="fa fa-instagram"></i></a></li><br>
+                <span>
+                 @World Merit Registered<br>
+                Develop by|Ali Qadeer 
+            </span>
+            </div>
+
+        </div>
+    </div>
+    <!-- Footer Area End -->
+
 
 
 </body>
